@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.157.2.20 2008/09/10 16:01:04 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.157.2.21 2008/11/27 23:17:31 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graph3d.c */
@@ -417,10 +417,14 @@ boundary3d(struct surface_points *plots, int count)
 	&& key->margin == GPKEY_RMARGIN) {
 	plot_bounds.xright -= key_col_wth * (key_cols - 1) + key_col_wth - 2 * t->h_char;
     }
-    plot_bounds.xleft += t->xmax * xoffset;
-    plot_bounds.xright += t->xmax * xoffset;
-    plot_bounds.ytop += t->ymax * yoffset;
-    plot_bounds.ybot += t->ymax * yoffset;
+    if (lmargin.scalex != screen)
+	plot_bounds.xleft += t->xmax * xoffset;
+    if (rmargin.scalex != screen)
+	plot_bounds.xright += t->xmax * xoffset;
+    if (tmargin.scalex != screen)
+	plot_bounds.ytop += t->ymax * yoffset;
+    if (bmargin.scalex != screen)
+	plot_bounds.ybot += t->ymax * yoffset;
     xmiddle = (plot_bounds.xright + plot_bounds.xleft) / 2;
     ymiddle = (plot_bounds.ytop + plot_bounds.ybot) / 2;
 
@@ -821,6 +825,7 @@ do_3dplot(
 	    if (ptitl_cnt > 0) {
 		/* maximise no cols, limited by label-length */
 		key_cols = (int) (plot_bounds.xright - plot_bounds.xleft) / key_col_wth;
+		if (key_cols < 1) key_cols = 1;
 		key_rows = (int) (ptitl_cnt + key_cols - 1) / key_cols;
 		/* now calculate actual no cols depending on no rows */
 		key_cols = (int) (ptitl_cnt + key_rows - 1) / key_rows;
